--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,6 @@ display: none; }
 
      		</div>
 
-<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -126,9 +125,15 @@ display: none; }
   <text id="textLine4" x="10" y="80" fill="orange">
   </text>
   <text id="textLine5" x="10" y="100" fill="purple">
-  </text>
+  </text>	
 
-</svg>
+ <g id="camera">
+  <!-- Grupo de hexágonos -->
+  <g id="hexagonGroup"></g>
+  <!-- Líneas de trayectoria -->
+  <!-- Punto azul -->
+  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
+	</g>
 
 <div id="mainContainer">
 
