--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@ display: none; }
 			<div id="fixedText">
 
      		</div>
-
+    <g id="camera">
 <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
@@ -127,8 +127,10 @@ display: none; }
   </text>
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
-
 </svg>
+	    	</g>
+
+
 
 <div id="mainContainer">
 
