--- a/public/index.html
+++ b/public/index.html
@@ -195,6 +195,12 @@ document.getElementById('submitButton').addEventListener('click', function () {
 	// ACTIVAR EL SERVIDOR
 	socket.emit('playerNameEntered', playerName);
 });
+
+	
+createHexagons();
+
+
+	
 const svgWidth = document.documentElement.clientWidth;
 const svgHeight = document.documentElement.clientHeight;
 
