--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ display: none; }
 
      		</div>
     <g id="camera">
-<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+<svg id="hexagonGroup"  style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
