--- a/public/index.html
+++ b/public/index.html
@@ -465,6 +465,9 @@ createHexagons();
 	
 function moveBluePoint( clickX, clickY ) {   
 
+camera.setAttribute('transform', `translate(800}, 800)`);	
+	
+
     console.log('Camara:', Camara);
 
 	
