--- a/public/index.html
+++ b/public/index.html
@@ -984,7 +984,7 @@ let i = 0;
         greenCircle.setAttribute('cy', y);
         greenCircle.setAttribute('r', '8');
         greenCircle.setAttribute('fill', 'green');
-        svg.appendChild(greenCircle);
+        hexagonGroup.appendChild(greenCircle);
 
 	     anime({
           targets: greenCircle,
