--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,6 @@ display: none; }
 
      		</div>
 
-<g id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -128,13 +127,21 @@ display: none; }
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
 
-</g>
 
 <div id="mainContainer">
 
 </div>
 
 
+
+	<g id="camera">
+  <!-- Grupo de hexágonos -->
+  <g id="hexagonGroup"></g>
+  <!-- Líneas de trayectoria -->
+  <g id="trajectoryLines"></g>
+  <!-- Punto azul -->
+  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
+	</g>
 
 
 
