Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   padding: 10px;
   border-radius: 5px;
   font-size: 2vw; /* Ajusta el tamaño del texto según sea necesario */
-  max-width: 90%; 
+//  max-width: 90%; 
     }
 
 #mainContainer {
