Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -711,7 +711,7 @@ drawGreenCirclesOnRandomPoints();
 ///////////////////////////////////////////////!!!!!!!!!
 
 function getHexagonPoints(x, y, size) {
-//console.log('Hexagon Points');
+console.log('Hexagon Points');
 const points = [];
 for (let i = 0; i < 6; i++) {
 const angle = (2 * Math.PI / 6) * i;
