Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,7 @@ left: 0;
 width: 100vw;
 height: 100vh;
 position: absolute;
-z-index: 999;
-display: none; }
+z-index: 999;}
     
 #bluePoint {
 display: none; }
