--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,9 @@ display: none; }
 top: 0;
 left: 0;
 width: 100vw;
+
+
+background-color: #000000;
 height: 100vh;
 position: absolute;
 z-index: 999;}
