--- a/public/index.html
+++ b/public/index.html
@@ -114,8 +114,22 @@ display: none; }
 			<div id="fixedText">
 
      		</div>
+<svg
+width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">    
+    <g id="camera">
+  <!-- Grupo de hexágonos -->
+  <g id="hexagonGroup"></g>
+  <!-- Líneas de trayectoria -->
+  <g id="trajectoryLines"></g>
+  <!-- Punto azul -->
+  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
+	</g>
 
-<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+
+<div id="mainContainer">
+
+</div>
+
 
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -127,13 +141,6 @@ display: none; }
   </text>
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
-
-</svg>
-
-<div id="mainContainer">
-
-</div>
-
 
 
 
