--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,24 @@ display: none; }
 			<div id="fixedText">
 
      		</div>
-
+<svg
+width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">   
+	
     <g id="camera">
   <!-- Grupo de hexágonos -->
-  <g id="hexagonGroup"></g>
+  <g id="hexagonGroup">
+<text id="textLine1" x="10" y="20" fill="red">
+  </text>
+  <text id="textLine2" x="10" y="40" fill="blue">
+  </text>
+  <text id="textLine3" x="10" y="60" fill="green">
+  </text>
+  <text id="textLine4" x="10" y="80" fill="orange">
+  </text>
+  <text id="textLine5" x="10" y="100" fill="purple">
+  </text>
+	  
+  </g>
   <!-- Líneas de trayectoria -->
   <g id="trajectoryLines"></g>
   <!-- Punto azul -->
@@ -130,16 +144,7 @@ display: none; }
 </div>
 
 
-	<text id="textLine1" x="10" y="20" fill="red">
-  </text>
-  <text id="textLine2" x="10" y="40" fill="blue">
-  </text>
-  <text id="textLine3" x="10" y="60" fill="green">
-  </text>
-  <text id="textLine4" x="10" y="80" fill="orange">
-  </text>
-  <text id="textLine5" x="10" y="100" fill="purple">
-  </text>
+	
 
 
 
