--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  
 	
     <g id="camera">
   <!-- Grupo de hexágonos -->
-  <g id="hexagonGroup">
+  <svg id="hexagonGroup">
 <text id="textLine1" x="10" y="20" fill="red">
   </text>
   <text id="textLine2" x="10" y="40" fill="blue">
@@ -131,9 +131,8 @@ width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
 	  
-  </g>
+  </svg>
   <!-- Líneas de trayectoria -->
-  <g id="trajectoryLines"></g>
   <!-- Punto azul -->
   <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
 	</g>
