--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  
 	
     <g id="camera">
   <!-- Grupo de hexágonos -->
-  <svg id="hexagonGroup">
+  <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;">
 <text id="textLine1" x="10" y="20" fill="red">
   </text>
   <text id="textLine2" x="10" y="40" fill="blue">
