--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@ const initialCameraY = svgHeight / 2 ;
 	
 	const camera = document.getElementById('camera');
 
-	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
+	//camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
 
 
 let textLine1 = document.getElementById('textLine1');
