--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,15 @@ height: 100vh;
 position: absolute;
 z-index: 1;
 display: none; }
+
+#camera {
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+position: absolute;
+z-index: 1;
+ }
     
 #bluePoint {
 display: none; }
