--- a/public/index.html
+++ b/public/index.html
@@ -76,14 +76,7 @@ position: absolute;
 z-index: 1;
 display: none; }
 
-#camera {
-top: 0;
-left: 0;
-width: 100vw;
-height: 100vh;
-position: absolute;
-z-index: 1;
- }
+
     
 #bluePoint {
 display: none; }
@@ -143,8 +136,8 @@ width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  
   </svg>
   <!-- Líneas de trayectoria -->
   <!-- Punto azul -->
-  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
 	</g>
+  </svg>
 
 
 <div id="mainContainer">
