--- a/public/index.html
+++ b/public/index.html
@@ -116,11 +116,24 @@ display: none; }
 			<div id="fixedText">
 
      		</div>
+
+<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+	<text id="textLine1" x="10" y="20" fill="red">
+  </text>
+  <text id="textLine2" x="10" y="40" fill="blue">
+  </text>
+  <text id="textLine3" x="10" y="60" fill="green">
+  </text>
+  <text id="textLine4" x="10" y="80" fill="orange">
+  </text>
+  <text id="textLine5" x="10" y="100" fill="purple">
+  </text>
+</svg>	
+
+ <!--	
 <svg
 width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">   
-	
-    <g id="camera">
-  <!-- Grupo de hexágonos -->
+<g id="camera">
   <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;">
 <text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -132,13 +145,10 @@ width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  
   </text>
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
-	  
   </svg>
-  <!-- Líneas de trayectoria -->
-  <!-- Punto azul -->
-	</g>
+   </g>
   </svg>
-
+ -->
 
 <div id="mainContainer">
 
