--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,9 @@ display: none; }
 
      		</div>
 
+
+<svg
+width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  	
 <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -129,6 +132,8 @@ display: none; }
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
 </svg>	
+</svg>	
+	
 
  <!--	
 <svg
