--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ display: none; }
 
 
 <svg
-width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg">  	
+ xmlns="http://www.w3.org/2000/svg">  	
 <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
