--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,14 @@ position: absolute;
 z-index: 1;
 display: none; }
 
-
+#firstP {
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+position: absolute;
+z-index: 1;
+ }
     
 #bluePoint {
 display: none; }
@@ -118,7 +125,7 @@ display: none; }
      		</div>
 
 
-<svg
+<svg id="firstP" 
  xmlns="http://www.w3.org/2000/svg">  	
 <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 	<text id="textLine1" x="10" y="20" fill="red">
