--- a/public/index.html
+++ b/public/index.html
@@ -127,8 +127,10 @@ display: none; }
 
 
 <svg id="firstP" 
- xmlns="http://www.w3.org/2000/svg">  	
-<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+ xmlns="http://www.w3.org/2000/svg">  
+    <g id="camera">
+	
+<svg id="hexagonGroup" style="background-color: #ffffff;" >
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
   <text id="textLine2" x="10" y="40" fill="blue">
@@ -140,6 +142,8 @@ display: none; }
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
 </svg>	
+	   	</g>
+ 
 </svg>	
 	
 
