--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,9 @@ display: none; }
 #firstP {
 top: 0;
 left: 0;
+	background-color: #ffffff;
+	width: 100vw;
+height: 100vh;
 position: absolute;
 z-index: 1;
 	display: none;
