--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@ let isMoving = false
 let FirstMove = true
 const hexagonAngle = 0.523598776; // 30 degrees in radians
 const players = {}; // Objeto para almacenar la información de los jugadores
-const hexagonGroup = document.getElementById('hexagonGroup');
+const hexagonGroup = document.getElementById('firstP');
 const bluePoint = {id: socket.id, name: '', x: 170,  y: 170,  color: 'blue', };
 let topplayers = [];
 
